--- a/config/customization/customize/sensor.yaml
+++ b/config/customization/customize/sensor.yaml
@@ -30,14 +30,14 @@ sensor.disk_use_percent_lv0:
 sensor.disk_use_percent_lv1:
   friendly_name: '/dev/lv1'
   icon: mdi:harddisk
-sensor.disk_use_percent_sda1:
-  friendly_name: '/dev/sda1'
-  icon: mdi:harddisk
-sensor.disk_use_percent_sda2:
-  friendly_name: '/dev/sda2'
-  icon: mdi:harddisk
 sensor.disk_use_percent_sdb1:
   friendly_name: '/dev/sdb1'
+  icon: mdi:harddisk
+sensor.disk_use_percent_sdb2:
+  friendly_name: '/dev/sdb2'
+  icon: mdi:harddisk
+sensor.disk_use_percent_sda1:
+  friendly_name: '/dev/sda1'
   icon: mdi:harddisk
 sensor.fail2ban_homeassistant:
   friendly_name: homeassistant
