--- a/config/integrations/history_include.yaml
+++ b/config/integrations/history_include.yaml
@@ -19,7 +19,8 @@ entities:
   - sensor.disk_use_percent_lv0
   - sensor.disk_use_percent_lv1
   - sensor.disk_use_percent_sda1
-  - sensor.disk_use_percent_sda2
+  - sensor.disk_use_percent_sdb1
+  - sensor.disk_use_percent_sdb2
   - sensor.memory_free
   - sensor.memory_use_percent
   - sensor.database_size
