set fyrtur covers to device class blinds

--- a/config/customization/customize_global.yaml
+++ b/config/customization/customize_global.yaml
@@ -1,6 +1,8 @@
 ---
 # global customization
 
+"cover.fyrtur_*":
+  device_class: blind
 "input_boolean.loop_livingcolors_*":
   friendly_name: Loop-Effekt
   icon: mdi:spotlight
