update disk use notification automation

--- a/config/automation/system_automations.yaml
+++ b/config/automation/system_automations.yaml
@@ -57,11 +57,14 @@
       entity_id: sensor.disk_use_percent_lv1
       above: 90
     - platform: numeric_state
+      entity_id: sensor.disk_use_percent_sda1
+      above: 90
+    - platform: numeric_state
       entity_id: sensor.disk_use_percent_sdb1
       above: 90
     - platform: numeric_state
       entity_id: sensor.disk_use_percent_sdb2
-      above: 90
+      above: 95
   action:
     service: !secret notify_ios
     data_template:
