--- a/config/integrations/history_include.yaml
+++ b/config/integrations/history_include.yaml
@@ -7,7 +7,8 @@ domains:
   - person
   - cover
 entities:
-  - binary_sensor.presence_10
+  - binary_sensor.motion_sensor
+  - binary_sensor.motion_sensor_2
   - light.zimmer
   - light.buro
   - light.wohnzimmer
