--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -106,7 +106,8 @@
               name: Frequency
               points_per_hour: 2
               line_color: '#1c6bba'
-              font_size: 65
+              font_size: 55
+              font_size_header: 12
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
@@ -118,7 +119,8 @@
             - type: custom:mini-graph-card
               name: Load
               points_per_hour: 12
-              font_size: 65
+              font_size: 55
+              font_size_header: 12
               # show:
               #   fill: false
               hours_to_show: 6
@@ -182,7 +184,7 @@
               title: CPU Temp
               min: 0
               max: 100
-              scale: 27px
+              scale: 25px
               severity:
                 red: 80
                 green: 0
@@ -204,7 +206,7 @@
               title: CPU
               min: 0
               max: 100
-              scale: 27px
+              scale: 25px
               severity:
                 red: 80
                 green: 0
@@ -226,7 +228,7 @@
               title: RAM
               min: 0
               max: 100
-              scale: 27px
+              scale: 25px
               severity:
                 red: 80
                 green: 0
