--- a/config/lovelace/views/05-IoT.yaml
+++ b/config/lovelace/views/05-IoT.yaml
@@ -9,55 +9,6 @@
       cards:
         - type: markdown
           content: |
-            ### Tasmota
-          style: |
-            ha-card {
-              height: 50px;
-              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-              box-shadow: 2px 2px rgba(0,0,0,0.0);
-              font-size: 20px;
-              font-weight: bold;
-              font-family: Helvetica;
-              letter-spacing: '-0.01em';
-            }
-        - type: horizontal-stack
-          cards:
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
-            - type: entities
-              entities:
-                - entity: automation.get_tasmota_device_info
-                  name: Tasmota status
-              style: |
-                ha-card {
-                  background-color: var(--primary-background-color);
-                  border-radius: 15px;
-                  box-shadow: var(--softui-standard-boxshadow);
-                }
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
-        - type: markdown
-          content: |
             ### Magic Mirror
           style: |
             ha-card {
@@ -83,57 +34,6 @@
                 card:
                   - width: 5px
                   - height: 10px
-            - type: entities
-              show_header_toggle: false
-              entities:
-                - entity: switch.magic_mirror
-                  name: Magic Mirror
-                - entity: switch.magic_mirror_power
-                  name: S20 - Magic Mirror
-              style: |
-                ha-card {
-                  background-color: var(--primary-background-color);
-                  border-radius: 15px;
-                  box-shadow: var(--softui-standard-boxshadow);
-                }
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
-        - type: 'custom:button-card'
-          show_icon: false
-          show_name: false
-          style: |
-            ha-card {
-              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-              box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-          styles:
-            card:
-              - width: 5px
-              - height: 10px
-        - type: horizontal-stack
-          cards:
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
             - type: custom:stack-in-card
               mode: vertical
               style: |
@@ -143,39 +43,28 @@
                   box-shadow: var(--softui-standard-boxshadow);
                 }
               cards:
-                - type: glance
-                  # title: S20 - MM
-                  entities:
-                    - entity: sensor.s20_mm_version
-                      name: Version
-                      icon: mdi:alpha-v-box
-                    - entity: sensor.s20_mm_ip
-                      name: IP
-                      icon: mdi:map-marker
-                    - entity: sensor.s20_mm_uptime
-                      name: Uptime
-                      icon: mdi:arrow-up-thick
-                    - entity: sensor.s20_mm_rssi
-                      name: RSSI
-                      icon: mdi:signal-variant
                 - type: entities
                   show_header_toggle: false
                   entities:
-                    - type: custom:fold-entity-row
-                      head:
-                        type: section
-                        label: Scripts
-                      entities:
-                        - entity: script.tasmota_status_sonoff_3463
-                          name: Status
-                        - entity: script.tasmota_fwstatus_sonoff_3463
-                          name: FW-Status
-                        - entity: script.tasmota_restart_sonoff_3463
-                          name: Neustart
-                        - entity: script.tasmota_reset_sonoff_3463
-                          name: Reset
-                        - entity: script.tasmota_upgrade_sonoff_3463
-                          name: Upgrade
+                    - entity: switch.magic_mirror
+                      name: Magic Mirror
+                    - entity: switch.sonoff_s20_magicmirror_relay
+                      name: S20 - Magic Mirror
+                - type: glance
+                  # title: S20 - MM
+                  entities:
+                    - entity: sensor.sonoffs20_magicmirror_version
+                      name: Version
+                      icon: mdi:alpha-v-box
+                    - entity: sensor.sonoffs20_magicmirror_ip_address
+                      name: IP
+                      icon: mdi:map-marker
+                    - entity: sensor.sonoffs20_magicmirror_uptime
+                      name: Uptime
+                      icon: mdi:arrow-up-thick
+                    - entity: sensor.sonoffs20_magicmirror_wifi_signal_sensor
+                      name: RSSI
+                      icon: mdi:signal-variant
             - type: 'custom:button-card'
               show_icon: false
               show_name: false
@@ -188,8 +77,6 @@
                 card:
                   - width: 5px
                   - height: 10px
-    - type: vertical-stack
-      cards:
         - type: markdown
           content: |
             ### Desk outlet
@@ -217,55 +104,6 @@
                 card:
                   - width: 5px
                   - height: 10px
-            - type: entities
-              show_header_toggle: false
-              entities:
-                - entity: switch.desk_charger_outlet
-                  name: Desk charger
-              style: |
-                ha-card {
-                  background-color: var(--primary-background-color);
-                  border-radius: 15px;
-                  box-shadow: var(--softui-standard-boxshadow);
-                }
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
-        - type: 'custom:button-card'
-          show_icon: false
-          show_name: false
-          style: |
-            ha-card {
-              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-              box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-          styles:
-            card:
-              - width: 5px
-              - height: 10px
-        - type: horizontal-stack
-          cards:
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 10px
             - type: custom:stack-in-card
               mode: vertical
               style: |
@@ -275,39 +113,26 @@
                   box-shadow: var(--softui-standard-boxshadow);
                 }
               cards:
-                - type: glance
-                  # title: S20 - desk
-                  entities:
-                    - entity: sensor.s20_deskoutlet_version
-                      name: Version
-                      icon: mdi:alpha-v-box
-                    - entity: sensor.s20_deskoutlet_ip
-                      name: IP
-                      icon: mdi:map-marker
-                    - entity: sensor.s20_deskoutlet_uptime
-                      name: Uptime
-                      icon: mdi:arrow-up-thick
-                    - entity: sensor.s20_deskoutlet_rssi
-                      name: RSSI
-                      icon: mdi:signal-variant
                 - type: entities
                   show_header_toggle: false
                   entities:
-                    - type: custom:fold-entity-row
-                      head:
-                        type: section
-                        label: Scripts
-                      entities:
-                        - entity: script.tasmota_status_sonoff_0528
-                          name: Status
-                        - entity: script.tasmota_fwstatus_sonoff_0528
-                          name: FW-Status
-                        - entity: script.tasmota_restart_sonoff_0528
-                          name: Neustart
-                        - entity: script.tasmota_reset_sonoff_0528
-                          name: Reset
-                        - entity: script.tasmota_upgrade_sonoff_0528
-                          name: Upgrade
+                    - entity: switch.sonoff_s20_desk_relay
+                      name: S20 - desk outlet
+                - type: glance
+                  # title: S20 - desk
+                  entities:
+                    - entity: sensor.sonoffs20_desk_version
+                      name: Version
+                      icon: mdi:alpha-v-box
+                    - entity: sensor.sonoffs20_desk_ip_address
+                      name: IP
+                      icon: mdi:map-marker
+                    - entity: sensor.sonoffs20_desk_uptime
+                      name: Uptime
+                      icon: mdi:arrow-up-thick
+                    - entity: sensor.sonoffs20_desk_wifi_signal_sensor
+                      name: RSSI
+                      icon: mdi:signal-variant
             - type: 'custom:button-card'
               show_icon: false
               show_name: false
@@ -320,6 +145,8 @@
                 card:
                   - width: 5px
                   - height: 10px
+    - type: vertical-stack
+      cards:
         - type: markdown
           content: |
             ### ESP32 - living room
