--- a/config/lovelace/views/01-home.yaml
+++ b/config/lovelace/views/01-home.yaml
@@ -837,7 +837,7 @@
                       name: Roborock
                       show_state: false
                       entities:
-                        - attribute: state
+                        - entity: vacuum.roborock
                           name: Status
                         - attribute: battery_level
                           name: Battery
