update fail2ban config

--- a/config/integrations/sensor/system.yaml
+++ b/config/integrations/sensor/system.yaml
@@ -42,9 +42,11 @@
   file_path: !secret path_fail2ban
   scan_interval: 180
   jails:
-    - homeassistant
-    - nextcloud
-    - sshd
+    - !secret f2b_jail1
+    - !secret f2b_jail2
+    - !secret f2b_jail3
+    - !secret f2b_jail4
+    - !secret f2b_jail5
 
 - platform: dnsip
   name: dns_lookup
