--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -5,6 +5,21 @@ device1: device_tracker.device_1
 device2: device_tracker.device_2
 device3: device_tracker.device_3
 dnsip_hostname: example.domain.com
+f2b_jail1: a
+f2b_jail2: b
+f2b_jail3: c
+f2b_jail4: d
+f2b_jail5: e
+f2b_jail1_sensor: sensor.fail2ban_a
+f2b_jail2_sensor: sensor.fail2ban_b
+f2b_jail3_sensor: sensor.fail2ban_c
+f2b_jail4_sensor: sensor.fail2ban_d
+f2b_jail5_sensor: sensor.fail2ban_e
+f2b_jail1_sensor_name: a
+f2b_jail2_sensor_name: b
+f2b_jail3_sensor_name: c
+f2b_jail4_sensor_name: d
+f2b_jail5_sensor_name: e
 hass_config_lat: 17.140005
 hass_config_long: 19.644145
 hass_tz: America/Detroit
